turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:3: error: not found: value setCouleurBrosse
	setCouleurBrosse(Color.black)
        ^Source:9: error: not found: value setCouleurBrosse
	setCouleurBrosse(Color.red)
        ^Source:15: error: not found: value setCouleurBrosse
	setCouleurBrosse(Color.yellow)	
        ^Source:21: error: not found: value setCouleurBrosse
	setCouleurBrosse(Color.pink)	
        ^