turtleart.lessons.turtleart.Main.DiskFour.scala.code
override def run() {
	setCouleurBrosse(Color.black)
	for (j <- 1 to 90){
			avance(100)
			recule(100)
			droite(1)
	}
	setCouleurBrosse(Color.red)
	for (j <- 1 to 90){
			avance(100)
			recule(100)
			droite(1)
	}
	setCouleurBrosse(Color.yellow)	
	for (j <- 1 to 90){
			avance(100)
			recule(100)
			droite(1)
	}
	setCouleurBrosse(Color.pink)	
	for (j <- 1 to 90){
			avance(100)
			recule(100)
			droite(1)
	}		
}
